# phi-crypto

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  NOTICE  README.fa.md  README.md  SECURITY.md  cbindgen.toml  deny.toml  phi_crypto.h
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  bbs-2023.md
examples/: did_and_voting.rs  selective_disclosure.rs
src/: bbs.rs  bbs_2023.rs  did.rs  error.rs  ffi.rs  lib.rs  semaphore.rs  voting.rs  wasm.rs  webauthn.rs
tests/: bbs_2023_kat.rs  integration.rs
tests/vectors/bbs_2023_sha256/: SOURCE.md
